Fix problem with too long stream name on deletition stream confirmation modal.
Add overflow-wrap rule to zulip.css for deactivation_stream_modal h3.

Fixes: #2596.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2429,6 +2429,11 @@ button.topic_edit_cancel {
     font-weight: 300;
 }
 
+#administration #deactivation_stream_modal h3 {
+    overflow-wrap: break-word;
+}
+
+
 #administration .administration-icon,
 #settings .settings-icon {
     margin-right: 10px;
